// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenuItem renders with defaultProps 1`] = `
<li
  className="ax-context-menu__list-item"
>
  <button
    className="ax-context-menu__item"
    disabled={undefined}
  >
    <div
      className="ax-context-menu__item-content"
    >
      Lorem ipsum
    </div>
  </button>
</li>
`;

exports[`ContextMenuItem renders with disabled 1`] = `
<li
  className="ax-context-menu__list-item"
>
  <button
    className="ax-context-menu__item"
    disabled={true}
  >
    <div
      className="ax-context-menu__item-content"
    >
      Lorem ipsum
    </div>
  </button>
</li>
`;

exports[`ContextMenuItem renders with selected 1`] = `
<li
  className="ax-context-menu__list-item ax-context-menu__list-item--selected ax-text--strong"
>
  <button
    className="ax-context-menu__item"
    disabled={undefined}
  >
    <div
      className="ax-context-menu__item-content"
    >
      Lorem ipsum
    </div>
    <div
      className="ax-context-menu__item-icon"
    >
      <svg
        className="ax-icon ax-icon--tick"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M4 7.5l2 2 6-6L13.5 5 6 12.5 2.5 9z\\" fill-rule=\\"nonzero\\" fill=\\"currentColor\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </div>
  </button>
</li>
`;
